css/tooplate-style.css
/* ... */
/* Base Styles */
body {
     background: var(--white);
     font-family: 'Source Sans Pro', sans-serif;
     overflow-x: hidden;
     color: var(--text-dark);
}

html, body {
     width: 100%;
     height: 100%;
}

/*---------------------------------------
  TYPOGRAPHY              
-----------------------------------------*/

h1,h2,h3,h4,h5,h6 {
  font-weight: 300;
}

h1 {
  font-size: 40px;
  font-weight: 200;
  line-height: 50px;
}

h2 {
  color: var(--text-light);
  font-size: 30px;
  line-height: 40px;
  margin-top: 0;
}

h3 {
  font-size: 20px;
  font-weight: bold;
  line-height: 32px;
}

h4 {
  color: #505050;
  font-size: 18px;
  line-height: 28px;
}

p {
  color: var(--text-light);
  font-size: 16px;
  font-weight: 300;
  line-height: 29px;
  letter-spacing: 0.5px;
}


/*---------------------------------------
  BUTTONS               
-----------------------------------------*/

.section-btn {
  margin: 32px 0 0 0;
  padding: 0;
}

.section-btn a,
.section-btn button {
  line-height: 45px;
  perspective: 1000px;
  color: var(--white);
  font-weight: normal;
}

.section-btn a span,
.section-btn button span {
  position: relative;
  display: inline-block;
  font-size: 18px;
  font-weight: normal;
  letter-spacing: 0.5px;
  padding: 0 25px;
  background: var(--contrast-color);
  border-radius: 1px;
  transition: all 0.3s ease;
  transform-origin: 50% 0;
  transform-style: preserve-3d;
}

.section-btn a:hover span,
.section-btn a:focus span,
.section-btn button:hover span,
.section-btn button:focus span {
  transform: translateY(-5px);
  background: var(--primary-color);
  color: var(--white);
}

.csstransforms3d .section-btn a span::before,
.csstransforms3d .section-btn button span::before {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--primary-color);
  color: var(--white);
  padding: 0 25px;
  content: attr(data-hover);
  transition: all 0.3s ease;
  transform: rotateX(-90deg);
  transform-origin: 50% 0;
  opacity: 0;
}

.csstransforms3d .section-btn a:hover span::before,
.csstransforms3d .section-btn a:focus span::before,
.csstransforms3d .section-btn button:hover span::before,
.csstransforms3d .section-btn button:hover span::before {
  opacity: 1;
  transform: rotateX(0);
  background: var(--primary-color);
  color: var(--white);
}


/*---------------------------------------
  GENERAL               
-----------------------------------------*/

html{
  -webkit-font-smoothing: antialiased;
}

a {
  color: var(--contrast-color);
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

a:hover, a:active, a:focus {
  color: var(--primary-color);
  outline: none;
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

*:before,
*:after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

::-webkit-scrollbar{
  width: 6px;
  height: 6px;
}

::-webkit-scrollbar-thumb {
  cursor: pointer;
  background: var(--primary-color);
}

.section-title {
  position: relative;
  padding-bottom: 22px;
}

.parallax-section {
  background-attachment: fixed !important;
  background-size: cover !important;
}

#about, #project,
#team, footer {
  background: #ffffff;
}

#about,
#team {
  padding-top: 100px;
  padding-bottom: 100px;
  text-align: center;
}


/*---------------------------------------
  PRE LOADER              
-----------------------------------------*/

.preloader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 99999;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  background: none repeat scroll 0 0 #ffffff;
}

.spinner {
  border: 1px solid transparent;
  border-radius: 5px;
  position: relative;
}

.spinner:before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 45px;
  height: 45px;
  margin-top: -10px;
  margin-left: -10px;
  border-radius: 50%;
  border: 1px solid #959595;
  border-top-color: #ffffff;
  animation: spinner .9s linear infinite;
}

@-webkit-@keyframes spinner {
  to {transform: rotate(360deg);}
}

@keyframes spinner {
  to {transform: rotate(360deg);}
}


/*---------------------------------------
  MENU             
-----------------------------------------*/

.custom-navbar {
  margin-bottom: 0;
  background-color: var(--navbar-bg);
  padding: 20px 0;
  transition: background-color 0.3s ease;
}

.custom-navbar .navbar-brand {
  color: var(--white);
  font-weight: normal;
  font-size: 25px;
}

.custom-navbar .nav li a {
  font-size: 14px;
  font-weight: normal;
  color: var(--white);
  letter-spacing: 0.5px;
  transition: all 0.3s ease;
  padding: 0;
  margin: 15px 20px;
  text-transform: uppercase;
}

.custom-navbar .navbar-nav > li > a:hover,
.custom-navbar .navbar-nav > li > a:focus {
  background-color: transparent;
  color: var(--contrast-color);
}

.custom-navbar .navbar-nav li a:after {
  content: "";
  position: absolute;
  display: block;
  width: 0px;
  height: 2px;
  margin: auto;
  background: transparent;
  transition: width .3s ease, background-color .3s ease;
}

.custom-navbar .navbar-nav li a:hover:after,
.custom-navbar .nav li.active > a:after {
  background: #ffffff;
  color: #ffffff;
  width: 100%;
}

.custom-navbar .nav li.active > a {
  background-color: transparent;
  color: #ffffff;
}

.custom-navbar .navbar-toggle {
  border: none;
  padding-top: 10px;
}

.custom-navbar .navbar-toggle {
  background-color: transparent;
}

.custom-navbar .navbar-toggle .icon-bar {
  background: #ffffff;
  border-color: transparent;
}

@media(min-width:768px) {
  .custom-navbar {
    background: 0 0; 
  }
  .custom-navbar.top-nav-collapse {
    background: #4dc47d;
    padding: 15px 0;
  }
}
/* ... */

